--- a/app_vendas/templates/index_vendas.html
+++ b/app_vendas/templates/index_vendas.html
@@ -1,11 +1,34 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vendas</title>
-</head>
+{% include "partial/head.html" %}
+
 <body>
-    <h1>Olá, seja bem vindo a pagina de <strong>VENDAS</strong> </h1>
+    {% include "partial/navbar.html" %}
+    <div class="container-fluid" style="max-width: 80%;">
+        <h2 style="text-align: center; margin: 32px 0px 64px 0px;">Pedidos Em aberto</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Id Pedido</th>
+                    <th scope="col">Nome Cliente</th>
+                    <th scope="col">Valor</th>
+                    <th scope="col">Detalhes</th>
+                    <!-- <th scope="col">Forma de Entrega</th> -->
+                </tr>
+            </thead>
+            <tbody>
+                {% for pedido in pedidos %}
+                <tr>
+                    {% for data in pedido.values %}
+                        <td>{{data}}</td>
+                    {% endfor %}
+                    <td><a href="{% url 'page_pedido' pedido.id %}">...</a></td>
+                    
+                </tr>
+                {% endfor %}
+
+            </tbody>
+        </table>
+    </div>
+    </table>
 </body>
+
 </html>
