--- a/templates/vendas/index.html
+++ b/templates/vendas/index.html
@@ -1,32 +1,33 @@
 {% include "partial/head.html" %}
+<style>
+    .container-pedidos{
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+    details {
+        background-color:gray;
+    }
+    summary {
+        text-align: center;
+    }
+</style>
 
 <body>
     {% include "partial/navbar.html" %}
     <div class="container-fluid" style="max-width: 80%;">
         <h2 style="text-align: center; margin: 32px 0px 64px 0px;">Pedidos Em aberto</h2>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">Id Pedido</th>
-                    <th scope="col">Nome Cliente</th>
-                    <th scope="col">Valor</th>
-                    <th scope="col">Detalhes</th>
-                    <!-- <th scope="col">Forma de Entrega</th> -->
-                </tr>
-            </thead>
-            <tbody>
-                {% for pedido in pedidos %}
-                <tr>
-                    {% for data in pedido.values %}
-                        <td>{{data}}</td>
-                    {% endfor %}
-                    <td><a href="{% url 'page_pedido' pedido.id %}">...</a></td>
-                    
-                </tr>
-                {% endfor %}
-
-            </tbody>
-        </table>
+        <div class="container-pedidos">
+            {% for pedido in pedidos %}
+            <details>
+                <summary>{{pedido.id}}</summary>
+                <div class="contents">
+                    <p>Nome Cliente: <strong>{{ pedido.client|upper }}</strong></p>
+                    <p>Valor: <strong>{{ pedido.value|upper }}</strong></p>
+                </div>
+            </details>
+            {%endfor%}
+        </div>
     </div>
     </table>
 </body>
